--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,1 +1,234 @@
-<\!DOCTYPE html><html><body><h1>CFG Query</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CFG Query - Natural Language to SQL</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #f5f5f5;
+            padding: 2rem;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            padding: 2rem;
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 0.5rem;
+        }
+
+        .subtitle {
+            color: #666;
+            margin-bottom: 2rem;
+        }
+
+        .query-form {
+            margin-bottom: 2rem;
+        }
+
+        .input-group {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        input[type="text"] {
+            flex: 1;
+            padding: 0.75rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+        }
+
+        button {
+            padding: 0.75rem 2rem;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
+
+        button:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+        }
+
+        .sql-output {
+            background: #f8f9fa;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            font-family: 'Courier New', monospace;
+            white-space: pre-wrap;
+            word-break: break-word;
+        }
+
+        .results-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+        }
+
+        .results-table th,
+        .results-table td {
+            padding: 0.75rem;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .results-table th {
+            background: #f8f9fa;
+            font-weight: 600;
+        }
+
+        .error {
+            background: #fff3cd;
+            border: 1px solid #ffc107;
+            color: #856404;
+            padding: 1rem;
+            border-radius: 4px;
+            margin-bottom: 1rem;
+        }
+
+        .loading {
+            color: #666;
+            font-style: italic;
+        }
+
+        .section-title {
+            color: #333;
+            margin: 1.5rem 0 0.5rem 0;
+            font-size: 1.1rem;
+            font-weight: 600;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>CFG Query</h1>
+        <p class="subtitle">Natural language to ClickHouse SQL using GPT-5</p>
+
+        <div class="query-form">
+            <div class="input-group">
+                <input
+                    type="text"
+                    id="queryInput"
+                    placeholder="e.g., Show me top 5 countries by revenue"
+                    autocomplete="off"
+                />
+                <button id="submitBtn" onclick="executeQuery()">Query</button>
+            </div>
+        </div>
+
+        <div id="output"></div>
+    </div>
+
+    <script>
+        async function executeQuery() {
+            const input = document.getElementById('queryInput');
+            const output = document.getElementById('output');
+            const submitBtn = document.getElementById('submitBtn');
+            const query = input.value.trim();
+
+            if (!query) {
+                output.innerHTML = '<div class="error">Please enter a query</div>';
+                return;
+            }
+
+            // Disable button and show loading
+            submitBtn.disabled = true;
+            output.innerHTML = '<div class="loading">Generating SQL and fetching results...</div>';
+
+            try {
+                const response = await fetch('/api/query', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ query })
+                });
+
+                if (!response.ok) {
+                    const error = await response.json();
+                    throw new Error(error.detail || 'Query failed');
+                }
+
+                const data = await response.json();
+
+                // Display SQL
+                let html = '<h2 class="section-title">Generated SQL</h2>';
+                html += `<div class="sql-output">${escapeHtml(data.sql)}</div>`;
+
+                // Display results
+                html += '<h2 class="section-title">Results</h2>';
+
+                if (data.results.data && data.results.data.length > 0) {
+                    const rows = data.results.data;
+                    const columns = Object.keys(rows[0]);
+
+                    html += '<table class="results-table">';
+                    html += '<thead><tr>';
+                    columns.forEach(col => {
+                        html += `<th>${escapeHtml(col)}</th>`;
+                    });
+                    html += '</tr></thead><tbody>';
+
+                    rows.forEach(row => {
+                        html += '<tr>';
+                        columns.forEach(col => {
+                            html += `<td>${escapeHtml(String(row[col]))}</td>`;
+                        });
+                        html += '</tr>';
+                    });
+
+                    html += '</tbody></table>';
+                } else {
+                    html += '<p>No results found</p>';
+                }
+
+                output.innerHTML = html;
+
+            } catch (error) {
+                output.innerHTML = `<div class="error">Error: ${escapeHtml(error.message)}</div>`;
+            } finally {
+                submitBtn.disabled = false;
+            }
+        }
+
+        function escapeHtml(text) {
+            const div = document.createElement('div');
+            div.textContent = text;
+            return div.innerHTML;
+        }
+
+        // Allow Enter key to submit
+        document.getElementById('queryInput').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                executeQuery();
+            }
+        });
+    </script>
+</body>
+</html>
